force-app/main/default/objects/Metadata_Item__c/Metadata_Item__c.object-meta.xml
<CustomObject>
    <label>Metadata Item</label>
    <nameField>
        <label>Metadata_Item__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>