force-app/main/default/objects/Metadata_Item__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition Snippet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>