force-app/main/default/objects/Metadata_Item__c/fields/Last_Indexed_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Indexed_On__c</fullName>
    <label>Last Indexed On</label>
    <type>DateTime</type>
</CustomField>