force-app/main/default/objects/Metadata_Item__c/fields/Metadata_Key__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Key__c</fullName>
    <externalId>true</externalId>
    <label>Metadata Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>