force-app/main/default/objects/Metadata_Item__c/fields/Search_Text__c.field-meta.xml
<CustomField>
    <fullName>Search_Text__c</fullName>
    <label>Search Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>